SigmaCodebackup3rdSep/objects/Work_Order_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Order Assignments</relationshipLabel>
        <relationshipName>Work_Order_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <referenceTo>Service_Resource__c</referenceTo>
        <relationshipLabel>Work Order Assignments</relationshipLabel>
        <relationshipName>Work_Order_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>San Mateo</fullName>
                </value>
                <value>
                    <fullName>Trinity</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order_Duration__c</fullName>
        <label>Work Order Duration</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipName>Work_Order_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Assignment</label>
    <nameField>
        <displayFormat>WOA-{0000}</displayFormat>
        <label>Work Order Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>